# gw2-meta-train

./: .gitignore  CMakeLists.txt  Meta-Train.txt  Nexus.h  README.md  User_Instructions.txt  build.sh  events.cpp  mumble.h  nexus.h
src/: chat.cpp  chat.h  dllmain.cpp  events.cpp  events.h  icon_png.h  state.cpp  state.h  ui.cpp  ui.h
